Perkin-UAT/force-app/main/default/objects/ArchiveData__c/ArchiveData__c.object-meta.xml
<CustomObject>
    <description>This object is used by administrators only, all other users will not have access.   This object holds data for fields we delete, along with the record id. Allowing us to report and restore data if needed.</description>
    <label>ArchiveData</label>
    <nameField>
        <displayFormat>archive-{000000000}</displayFormat>
        <label>Recond Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ArchiveDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>