Perkin-UAT/force-app/main/default/objects/ArchiveData__c/fields/Batch_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Time__c</fullName>
    <description>This date/time was uploaded into the table where the date has been fixed (in the event we need to purge and replace a specific batch)</description>
    <inlineHelpText>Enter This date/time was uploaded into the table where the date has been fixed (in the event we need to purge and replace a specific batch)</inlineHelpText>
    <label>Batch Time</label>
    <type>DateTime</type>
</CustomField>