Perkin-UAT/force-app/main/default/objects/ArchiveData__c/fields/fxAutoId__c.field-meta.xml
<CustomField>
    <fullName>fxAutoId__c</fullName>
    <description>- AutoNumber, External Id, Unique,</description>
    <displayFormat>Archive-{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>fxAutoId</label>
    <type>AutoNumber</type>
</CustomField>