Perkin-UAT/force-app/main/default/objects/ArchiveData__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Normally a default field but will create for now. If it appears later,  this field can be deleted.</description>
    <inlineHelpText>Enter the last modified date.</inlineHelpText>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>