Perkin-UAT/force-app/main/default/objects/ArchiveData__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The Original Object API Name where this field and value came from</description>
    <inlineHelpText>Enter the Original Object API Name where this field and value came from</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>