Perkin-UAT/force-app/main/default/objects/ArchiveData__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>the value in the field turned into text (regardless of original format</description>
    <inlineHelpText>Enter  the value in the field turned into text (regardless of original format</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>